Start injecting current-user-store.
