# src/api/api.interfaces.ts
@@ -6,16 +6,19 @@ import {
   UpdateUserDto
 } from './api.generated';
 
+export interface AuthApi {
+  authenticateCreate: (data: AuthenticateRequest, params?: RequestParams) => any;
+  refreshTokenCreate: (params?: RequestParams) => any;
+}
+
 export interface UsersApi {
   usersList: (params?: RequestParams) => any;
-  usersDelete: (params?: RequestParams) => any;
   usersCreate: (data: CreateUserDto, params?: RequestParams) => any;
-  summaryList: (params?: RequestParams) => any;
-  totalYearList: (params?: RequestParams) => any;
-  refreshTokenCreate: (params?: RequestParams) => any;
   usersUpdate: (data: UpdateUserDto, params?: RequestParams) => any;
-  authenticateCreate: (data: AuthenticateRequest, params?: RequestParams) => any;
-  totalMonthList: (params?: RequestParams) => any
+  usersDelete: (params?: RequestParams) => any;
+  summaryList: (params?: RequestParams) => any;
+  totalMonthList: (params?: RequestParams) => any;
+  totalYearList: (params?: RequestParams) => any;
 }
 
 export interface CategoriesApi {
@@ -24,13 +27,13 @@ export interface CategoriesApi {
   categoriesDelete: (id: number, params?: RequestParams) => any;
   categoriesList: (params?: RequestParams) => any;
   categoriesCreate: (data: CreateCategoryDto, params?: RequestParams) => any;
-  byNameDelete: (categoryName: string, params?: RequestParams) => any;
+  categoriesDelete2: (query?: { categoryName?: string }, params?: RequestParams) => any;
 }
 
 export interface TransactionsApi {
   transactionsDetail: (id: number, params?: RequestParams) => any;
   transactionsDelete: (id: number, params?: RequestParams) => any;
-  ofUserList: (query: { from: number; to: number; like?: string; when?: string }, params?: RequestParams) => any;
+  userTransactionsList: (query: { from: number; to: number; like?: string; when?: string }, params?: RequestParams) => any;
   transactionsCreate: (data: CreateTransactionDto, params?: RequestParams) => any;
 }
 
